--- a/templates/pages/voyages.html.twig
+++ b/templates/pages/voyages.html.twig
@@ -14,6 +14,7 @@
                         <div class="form-group mr-l mb-2">
                             <input type="text" class="sm" name="recherche">
                         </div>
+                        <input type="hidden" name="_token" value="{{ csrf_token('filtre_ville') }}">
                         <button type="submit" class="btn btn-primary mb-2 btn-sm">filter</button>
                     </form>
                     
@@ -27,6 +28,7 @@
                         <div class="form-group mr-l mb-2">
                             <input type="text" class="sm" name="recherche">
                         </div>
+                        <input type="hidden" name="_token" value="{{ csrf_token('filtre_pays') }}">                        
                         <button type="submit" class="btn btn-primary mb-2 btn-sm">filter</button>
                     </form>
                         
